Added XS support
